--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "mongoose": "^6.5.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.8",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "uuid": "^8.3.2",
+    "validation-latitude-longitude": "^1.1.3"
   }
 }
